--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -114,7 +114,7 @@ presetScripts:
             'service.instance.id': df.pod,
             'k8s.pod.name': df.pod,
             'k8s.namespace.name': df.namespace,
-            'pixie.cluster.id': df.cluster_id,
+            'px.cluster.id': df.cluster_id,
             'k8s.cluster.name': df.cluster_name,
             'instrumentation.provider': df.pixie,
           },
@@ -297,7 +297,7 @@ presetScripts:
             'service.instance.id': df.pod,
             'k8s.pod.name': df.pod,
             'k8s.namespace.name': df.namespace,
-            'pixie.cluster.id': df.cluster_id,
+            'px.cluster.id': df.cluster_id,
             'k8s.cluster.name': df.cluster_name,
             'instrumentation.provider': df.pixie,
           },
@@ -354,7 +354,7 @@ presetScripts:
             'service.instance.id': df.pod,
             'k8s.pod.name': df.pod,
             'k8s.namespace.name': df.namespace,
-            'pixie.cluster.id': df.cluster_id,
+            'px.cluster.id': df.cluster_id,
             'k8s.cluster.name': df.cluster_name,
             'instrumentation.provider': df.pixie,
           },
