--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -350,6 +350,120 @@ presetScripts:
         ),
       )
     defaultFrequencyS: 10
+  - name: "PostgreSQL Metrics"
+    description: "This script sends PostgreSQL metrics to New Relic's OTel endpoint."
+    script: |
+      #px:set max_output_rows_per_table=10000
+
+      import px
+
+      def remove_ns_prefix(column):
+        return px.replace('[a-z0-9\-]*/', column, '')
+
+      def add_source_dest_columns(df):
+        df.pod = df.ctx['pod']
+        df.namespace = df.ctx['namespace']
+
+        # If remote_addr is a pod, get its name. If not, use IP address.
+        df.ra_pod = px.pod_id_to_pod_name(px.ip_to_pod_id(df.remote_addr))
+        df.is_ra_pod = df.ra_pod != ''
+        df.ra_name = px.select(df.is_ra_pod, df.ra_pod, df.remote_addr)
+
+        df.is_server_tracing = df.trace_role == 2
+        df.is_source_pod_type = px.select(df.is_server_tracing, df.is_ra_pod, True)
+        df.is_dest_pod_type = px.select(df.is_server_tracing, True, df.is_ra_pod)
+
+        # Set client and server based on trace_role.
+        df.source_pod = px.select(df.is_server_tracing, df.ra_name, df.pod)
+        df.destination_pod = px.select(df.is_server_tracing, df.pod, df.ra_name)
+
+        df = df.drop(['ra_pod', 'is_ra_pod', 'ra_name', 'is_server_tracing'])
+        df.source_service = px.pod_name_to_service_name(df.source_pod)
+        df.destination_service = px.pod_name_to_service_name(df.destination_pod)
+        df.destination_namespace = px.pod_name_to_namespace(df.destination_pod)
+        df.source_namespace = px.pod_name_to_namespace(df.source_pod)
+
+        df.source_service = remove_ns_prefix(df.source_service)
+        df.destination_service = remove_ns_prefix(df.destination_service)
+        df.source_pod = remove_ns_prefix(df.source_pod)
+        df.destination_pod = remove_ns_prefix(df.destination_pod)
+
+        # If the destination service is missing then try the nslookup
+        df.destination_service = px.select(
+          df.destination_service != '',
+          df.destination_service,
+          px.nslookup(df.remote_addr),
+        )
+        # If the destination service is still missing then set the remote_addr
+        df.destination_service = px.select(
+          df.destination_service != '',
+          df.destination_service,
+          df.remote_addr,
+        )
+        return df
+
+      df = px.DataFrame('pgsql_events', start_time=px.plugin.start_time, end_time=px.plugin.end_time)
+      df = add_source_dest_columns(df)
+
+      df.latency = df.latency / (1000 * 1000)
+      df.req_bytes = px.length(df.req)
+      df.resp_bytes = px.length(df.resp)
+      df = df.groupby(['source_pod', 'source_service', 'source_namespace', 'destination_pod', 'destination_service',
+                         'destination_namespace', 'req_cmd']).agg(
+        latency_count=('latency', px.count),
+        latency_min=('latency', px.min),
+        latency_max=('latency', px.max),
+        latency_sum=('latency', px.sum),
+        time_=('time_', px.max),
+        req_bytes=('req_bytes', px.sum),
+        resp_bytes=('resp_bytes', px.sum),
+      )
+
+      df.cluster_name = px.vizier_name()
+      df.cluster_id = px.vizier_id()
+      df.pixie = 'pixie'
+      df.db_system = 'postgres'
+
+      px.export(
+        df, px.otel.Data(
+          resource={
+            'service.name': df.source_service,
+            'service.instance.id': df.source_pod,
+            'k8s.namespace.name': df.source_namespace,
+            'postgres.service.name': df.destination_service,
+            'postgres.pod.name': df.destination_pod,
+            'postgres.namespace.name': df.destination_namespace,
+            'postgres.req_cmd': df.req_cmd,
+            'k8s.cluster.name': df.cluster_name,
+            'px.cluster.id': df.cluster_id,
+            'instrumentation.provider': df.pixie,
+            'db.system': df.db_system,
+          },
+          data=[
+            px.otel.metric.Summary(
+              name='postgres.latency',
+              count=df.latency_count,
+              sum=df.latency_sum,
+              unit='ms',
+              quantile_values={
+                0.0: df.latency_min,
+                1.0: df.latency_max,
+              },
+            ),
+            px.otel.metric.Gauge(
+              name='postgres.req_bytes',
+              description='',
+              value=df.req_bytes,
+            ),
+            px.otel.metric.Gauge(
+              name='postgres.resp_bytes',
+              description='',
+              value=df.resp_bytes,
+            )
+          ]
+        ),
+      )
+    defaultFrequencyS: 10
   - name: "MySQL Spans"
     description: "This script generates span events from queries to MySQL databases and sends them to New Relic's OTel endpoint."
     script: |
