--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -1496,6 +1496,30 @@ presetScripts:
       #px:set max_output_rows_per_table=500
       import px
 
+      def dns_rcode_name(df, input_col_name, output_col_name):
+          df[output_col_name] = 'Unknown'
+          df[output_col_name] = px.select(df[input_col_name]==0, 'NoError', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==1, 'FormErr', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==2, 'ServFail', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==3, 'NXDomain', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==4, 'NotImp', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==5, 'Refused', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==6, 'YXDomain', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==7, 'YXRRSet', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==8, 'NXRRSet', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==9, 'NotAuth', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==10, 'NotZone', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==11, 'DSOTYPENI', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==16, 'BADVERS', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==17, 'BADKEY', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==18, 'BADTIME', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==19, 'BADMODE', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==20, 'BADNAME', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==21, 'BADALG', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==22, 'BADTRUNC', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==23, 'BADCOOKIE', df[output_col_name])
+          return df
+
       df = px.DataFrame('dns_events', start_time=px.plugin.start_time, end_time=px.plugin.end_time)
       df = df[df.trace_role == 1]
       df = df.drop(['trace_role'])
@@ -1513,6 +1537,7 @@ presetScripts:
       df.queries = px.pluck(df.req_body, 'queries')
       df.answers = px.pluck(df.resp_body, 'answers')
       df.rcode = px.pluck_int64(df.resp_header, 'rcode')
+      df = dns_rcode_name(df, 'rcode', 'rcode_name')
       df.resolved = px.contains(df.answers, 'name')
 
       df.query = px.replace('.*"name":"(.*?)".*', df.queries, '\\1')
@@ -1586,6 +1611,7 @@ presetScripts:
                 'dns.server.cluster_id': df.dns_cluster_id,
                 'dns.query': df.query,
                 'dns.rcode': df.rcode,
+                'dns.rcode_name': df.rcode_name,
                 'dns.resolved': df.resolved,
                 'dns.query_type': df.query_type,
             },
