--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -1369,18 +1369,18 @@ presetScripts:
       import px
 
       def dns_rcode_name(df, input_col_name, output_col_name):
-          df[output_col_name] = 'Unknown'
-          df[output_col_name] = px.select(df[input_col_name]==0, 'NoError', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==1, 'FormErr', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==2, 'ServFail', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==3, 'NXDomain', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==4, 'NotImp', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==5, 'Refused', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==6, 'YXDomain', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==7, 'YXRRSet', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==8, 'NXRRSet', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==9, 'NotAuth', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==10, 'NotZone', df[output_col_name])
+          df[output_col_name] = 'UNKNOWN'
+          df[output_col_name] = px.select(df[input_col_name]==0, 'NOERROR', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==1, 'FORMERR', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==2, 'SERVFAIL', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==3, 'NXDOMAIN', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==4, 'NOTIMP', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==5, 'REFUSED', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==6, 'YXDOMAIN', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==7, 'YXRRSET', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==8, 'NXRRSET', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==9, 'NOTAUTH', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==10, 'NOTZONE', df[output_col_name])
           df[output_col_name] = px.select(df[input_col_name]==11, 'DSOTYPENI', df[output_col_name])
           df[output_col_name] = px.select(df[input_col_name]==16, 'BADVERS', df[output_col_name])
           df[output_col_name] = px.select(df[input_col_name]==17, 'BADKEY', df[output_col_name])
@@ -1497,18 +1497,18 @@ presetScripts:
       import px
 
       def dns_rcode_name(df, input_col_name, output_col_name):
-          df[output_col_name] = 'Unknown'
-          df[output_col_name] = px.select(df[input_col_name]==0, 'NoError', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==1, 'FormErr', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==2, 'ServFail', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==3, 'NXDomain', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==4, 'NotImp', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==5, 'Refused', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==6, 'YXDomain', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==7, 'YXRRSet', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==8, 'NXRRSet', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==9, 'NotAuth', df[output_col_name])
-          df[output_col_name] = px.select(df[input_col_name]==10, 'NotZone', df[output_col_name])
+          df[output_col_name] = 'UNKNOWN'
+          df[output_col_name] = px.select(df[input_col_name]==0, 'NOERROR', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==1, 'FORMERR', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==2, 'SERVFAIL', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==3, 'NXDOMAIN', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==4, 'NOTIMP', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==5, 'REFUSED', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==6, 'YXDOMAIN', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==7, 'YXRRSET', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==8, 'NXRRSET', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==9, 'NOTAUTH', df[output_col_name])
+          df[output_col_name] = px.select(df[input_col_name]==10, 'NOTZONE', df[output_col_name])
           df[output_col_name] = px.select(df[input_col_name]==11, 'DSOTYPENI', df[output_col_name])
           df[output_col_name] = px.select(df[input_col_name]==16, 'BADVERS', df[output_col_name])
           df[output_col_name] = px.select(df[input_col_name]==17, 'BADKEY', df[output_col_name])
